Modificacion de Perfil

--- a/packedgo/front/admin-dashboard.html
+++ b/packedgo/front/admin-dashboard.html
@@ -583,7 +583,7 @@
             </div>
 
             <div class="menu-section">
-                <div class="menu-section-title">GestiÛn</div>
+                <div class="menu-section-title">Gesti√≥n</div>
                 <a href="#" class="menu-item" onclick="showSection('events')">
                     <i class="bi bi-calendar-event"></i>
                     <span>Eventos</span>
@@ -594,7 +594,7 @@
                 </a>
                 <a href="#" class="menu-item" onclick="showSection('orders')">
                     <i class="bi bi-receipt"></i>
-                    <span>”rdenes</span>
+                    <span>√ìrdenes</span>
                 </a>
                 <a href="#" class="menu-item" onclick="showSection('venues')">
                     <i class="bi bi-building"></i>
@@ -606,7 +606,7 @@
                 <div class="menu-section-title">Sistema</div>
                 <a href="#" class="menu-item" onclick="showSection('settings')">
                     <i class="bi bi-gear"></i>
-                    <span>ConfiguraciÛn</span>
+                    <span>Configuraci√≥n</span>
                 </a>
                 <a href="#" class="menu-item" onclick="showSection('logs')">
                     <i class="bi bi-file-text"></i>
@@ -615,14 +615,14 @@
             </div>
 
             <div class="menu-section">
-                <div class="menu-section-title">NavegaciÛn</div>
+                <div class="menu-section-title">Navegaci√≥n</div>
                 <a href="dashboard.html" class="menu-item">
                     <i class="bi bi-arrow-left"></i>
                     <span>Volver</span>
                 </a>
                 <a href="#" class="menu-item" onclick="logout()">
                     <i class="bi bi-box-arrow-right"></i>
-                    <span>Cerrar SesiÛn</span>
+                    <span>Cerrar Sesi√≥n</span>
                 </a>
             </div>
         </nav>
@@ -714,7 +714,7 @@
                             <i class="bi bi-plus-circle"></i>
                         </div>
                         <div class="action-title">Crear Evento</div>
-                        <div class="action-description">AÒadir un nuevo evento a la plataforma</div>
+                        <div class="action-description">A√±adir un nuevo evento a la plataforma</div>
                     </div>
                     <div class="action-card" onclick="showSection('users')">
                         <div class="action-icon">
@@ -728,13 +728,13 @@
                             <i class="bi bi-bar-chart"></i>
                         </div>
                         <div class="action-title">Ver Reportes</div>
-                        <div class="action-description">Analizar mÈtricas y estadÌsticas</div>
+                        <div class="action-description">Analizar m√©tricas y estad√≠sticas</div>
                     </div>
                     <div class="action-card" onclick="showSection('settings')">
                         <div class="action-icon">
                             <i class="bi bi-gear-fill"></i>
                         </div>
-                        <div class="action-title">ConfiguraciÛn</div>
+                        <div class="action-title">Configuraci√≥n</div>
                         <div class="action-description">Ajustar configuraciones del sistema</div>
                     </div>
                 </div>
@@ -756,7 +756,7 @@
                                 <thead>
                                     <tr>
                                         <th>Usuario</th>
-                                        <th>AcciÛn</th>
+                                        <th>Acci√≥n</th>
                                         <th>Evento</th>
                                         <th>Fecha</th>
                                         <th>Estado</th>
@@ -764,31 +764,31 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>Juan PÈrez</td>
+                                        <td>Juan P√©rez</td>
                                         <td>Compra de entrada</td>
                                         <td>Festival Rock Nacional</td>
                                         <td>Hace 2 horas</td>
                                         <td><span class="status-badge status-active">Completado</span></td>
                                     </tr>
                                     <tr>
-                                        <td>MarÌa GarcÌa</td>
+                                        <td>Mar√≠a Garc√≠a</td>
                                         <td>Registro nuevo</td>
                                         <td>-</td>
                                         <td>Hace 4 horas</td>
                                         <td><span class="status-badge status-active">Activo</span></td>
                                     </tr>
                                     <tr>
-                                        <td>Carlos LÛpez</td>
-                                        <td>CancelaciÛn</td>
+                                        <td>Carlos L√≥pez</td>
+                                        <td>Cancelaci√≥n</td>
                                         <td>Romeo y Julieta</td>
                                         <td>Hace 6 horas</td>
                                         <td><span class="status-badge status-pending">Procesando</span></td>
                                     </tr>
                                     <tr>
-                                        <td>Ana MartÌnez</td>
+                                        <td>Ana Mart√≠nez</td>
                                         <td>Compra de entrada</td>
                                         <td>Copa Argentina Final</td>
-                                        <td>Hace 1 dÌa</td>
+                                        <td>Hace 1 d√≠a</td>
                                         <td><span class="status-badge status-active">Completado</span></td>
                                     </tr>
                                 </tbody>
@@ -862,7 +862,7 @@
                     <div class="section-header">
                         <h3 class="section-title">
                             <i class="bi bi-calendar-event"></i>
-                            GestiÛn de Eventos
+                            Gesti√≥n de Eventos
                         </h3>
                         <button class="btn btn-admin-primary">
                             <i class="bi bi-plus me-2"></i>Crear Evento
@@ -870,8 +870,8 @@
                     </div>
                     <div class="section-content text-center">
                         <i class="bi bi-calendar-event" style="font-size: 4rem; color: var(--text-light); margin-bottom: 1rem;"></i>
-                        <h4>GestiÛn de Eventos</h4>
-                        <p>AquÌ podr·s crear, editar y administrar todos los eventos de la plataforma.</p>
+                        <h4>Gesti√≥n de Eventos</h4>
+                        <p>Aqu√≠ podr√°s crear, editar y administrar todos los eventos de la plataforma.</p>
                     </div>
                 </div>
             </div>
@@ -881,7 +881,7 @@
                     <div class="section-header">
                         <h3 class="section-title">
                             <i class="bi bi-people"></i>
-                            GestiÛn de Usuarios
+                            Gesti√≥n de Usuarios
                         </h3>
                         <button class="btn btn-admin-primary">
                             <i class="bi bi-person-plus me-2"></i>Nuevo Usuario
@@ -889,7 +889,7 @@
                     </div>
                     <div class="section-content text-center">
                         <i class="bi bi-people" style="font-size: 4rem; color: var(--text-light); margin-bottom: 1rem;"></i>
-                        <h4>AdministraciÛn de Usuarios</h4>
+                        <h4>Administraci√≥n de Usuarios</h4>
                         <p>Gestiona todos los usuarios registrados en la plataforma.</p>
                     </div>
                 </div>
@@ -906,7 +906,7 @@
                     <div class="section-content text-center">
                         <i class="bi bi-bar-chart" style="font-size: 4rem; color: var(--text-light); margin-bottom: 1rem;"></i>
                         <h4>Analytics Avanzados</h4>
-                        <p>Visualiza mÈtricas detalladas y reportes de la plataforma.</p>
+                        <p>Visualiza m√©tricas detalladas y reportes de la plataforma.</p>
                     </div>
                 </div>
             </div>
@@ -924,7 +924,7 @@
             token: null
         };
 
-        // Verificar autenticaciÛn al cargar
+        // Verificar autenticaci√≥n al cargar
         document.addEventListener('DOMContentLoaded', function() {
             checkAdminAuthentication();
             loadAdminData();
@@ -960,12 +960,12 @@
             adminName.textContent = currentAdmin.name;
             adminAvatar.textContent = currentAdmin.name.charAt(0).toUpperCase();
 
-            // Simular carga de estadÌsticas en tiempo real
+            // Simular carga de estad√≠sticas en tiempo real
             updateAdminStats();
         }
 
         function updateAdminStats() {
-            // En una aplicaciÛn real, esto se conectarÌa con tu API
+            // En una aplicaci√≥n real, esto se conectar√≠a con tu API
             const stats = {
                 events: Math.floor(Math.random() * 50) + 150,
                 users: (Math.floor(Math.random() * 10) + 40) + '.2K',
@@ -1010,29 +1010,29 @@
                 section.style.display = 'none';
             });
 
-            // Mostrar la secciÛn seleccionada
+            // Mostrar la secci√≥n seleccionada
             const selectedSection = document.getElementById(sectionName + '-section');
             if (selectedSection) {
                 selectedSection.style.display = 'block';
             }
 
-            // Actualizar tÌtulo de p·gina
+            // Actualizar t√≠tulo de p√°gina
             const pageTitle = document.getElementById('pageTitle');
             const titles = {
                 'dashboard': 'Panel Administrativo',
-                'events': 'GestiÛn de Eventos',
-                'users': 'GestiÛn de Usuarios',
-                'orders': 'GestiÛn de ”rdenes',
-                'venues': 'GestiÛn de Venues',
+                'events': 'Gesti√≥n de Eventos',
+                'users': 'Gesti√≥n de Usuarios',
+                'orders': 'Gesti√≥n de √ìrdenes',
+                'venues': 'Gesti√≥n de Venues',
                 'analytics': 'Analytics y Reportes',
-                'settings': 'ConfiguraciÛn del Sistema',
+                'settings': 'Configuraci√≥n del Sistema',
                 'logs': 'Logs del Sistema'
             };
             
             const icon = '<i class="bi bi-shield-check"></i>';
             pageTitle.innerHTML = icon + ' ' + (titles[sectionName] || 'Panel Admin');
 
-            // Actualizar men˙ activo
+            // Actualizar men√∫ activo
             const menuItems = document.querySelectorAll('.menu-item');
             menuItems.forEach(item => {
                 item.classList.remove('active');
@@ -1042,14 +1042,14 @@
                 event.target.classList.add('active');
             }
             
-            // Cerrar sidebar en mÛvil despuÈs de seleccionar
+            // Cerrar sidebar en m√≥vil despu√©s de seleccionar
             if (window.innerWidth <= 768) {
                 closeMobileSidebar();
             }
         }
 
         function logout() {
-            if (confirm('øEst·s seguro que deseas cerrar sesiÛn del panel administrativo?')) {
+            if (confirm('¬øEst√°s seguro que deseas cerrar sesi√≥n del panel administrativo?')) {
                 localStorage.removeItem('userToken');
                 localStorage.removeItem('userRole');
                 localStorage.removeItem('userName');
@@ -1069,7 +1069,7 @@
             }
         });
 
-        // Actualizar estadÌsticas cada 30 segundos
+        // Actualizar estad√≠sticas cada 30 segundos
         setInterval(updateAdminStats, 30000);
     </script>
 </body>
