--- a/packedgo/front-angular/src/index.html
+++ b/packedgo/front-angular/src/index.html
@@ -5,7 +5,9 @@
   <title>PackedGo - Sistema de Gestión de Eventos</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/images/logo-icon.svg?v=2">
+  <link rel="shortcut icon" type="image/svg+xml" href="/images/logo-icon.svg?v=2">
+  <link rel="apple-touch-icon" href="/images/logo-icon.svg?v=2">
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
   <!-- Google Fonts -->
